--- a/Portfolio/resume/templates/index.html
+++ b/Portfolio/resume/templates/index.html
@@ -24,7 +24,7 @@
     
     <div class="hero-container">
 
-      <h1>{{header.0.title}}</h1>
+      <h1>{{personal_info.user.first_name}} {{personal_info.user.last_name}}</h1>
       <h2>{{header.0.subtitle}}</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
@@ -75,30 +75,7 @@
                     {% endfor %}
                   </div>
                 </div>
-                
-                <!-- {% for i in countBox2 %}
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  
-                  <div class="count-box">
-                    <i class="bi bi-journal-richtextr" style="color: #8a1ac2;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end={{i.count}}" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>{{i.title}}</strong> {{i.subtitle}}</p>
-                  </div>
-                
-                   
-                </div>
-                {% endfor %} -->
-                <!-- {% for i in countBox2 %}
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-clock" style="color: #2cbdee;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end={{i.count}} data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>{{i.title}}</strong> {{i.subtitle}} </p>
-                  </div>
-                </div>
-                {% endfor %} -->
-
-                
+                                            
                 
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   
@@ -128,21 +105,6 @@
                   </div>
                 {% endfor %}
                 </div>
-<!--        
-              <div class="progress">
-                <span class="skill">DJANGO<i class="val">40%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-              <div class="progress">
-                <span class="skill">Git,GitHub <i class="val">65%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div> -->
-              
-
           </div>
         </div>
 
@@ -189,12 +151,6 @@
             {% endfor %}
             </div>
             
-            <!-- <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div> -->
           </div>
           
           <div class="col-lg-6">
@@ -414,7 +370,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Narine Adamyan</h3>
+      <h3>{{personal_info.user.first_name}} {{personal_info.user.last_name}}</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -424,7 +380,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Laura</span></strong>. All Rights Reserved
+        &copy; <strong><span>{{personal_info.user.first_name}} {{personal_info.user.last_name}}</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
