--- a/Portfolio/resume/templates/index.html
+++ b/Portfolio/resume/templates/index.html
@@ -206,7 +206,7 @@
             <p>Movies</p>
             <a href="{% static 'assets/img/portfolio/portfolio-1.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=Gtq3U4Sbrog" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -218,7 +218,7 @@
             <p>Music</p>
             <a href="{% static 'assets/img/portfolio/portfolio-2.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=NlwIDxCjL-8&list=RDNlwIDxCjL-8&start_radio=1" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -230,7 +230,7 @@
             <p>Movies</p>
             <a href="{% static 'assets/img/portfolio/portfolio-3.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=uxI8axRmRg0" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -242,7 +242,7 @@
             <p>Book</p>
             <a href="{% static 'assets/img/portfolio/portfolio-4.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=4CSIRm7bK8g" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -254,7 +254,7 @@
             <p>Music</p>
             <a href="{% static 'assets/img/portfolio/portfolio-5.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=TO-_3tck2tg" target="_blank"  class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -266,7 +266,7 @@
             <p>Movies</p>
             <a href="{% static 'assets/img/portfolio/portfolio-6.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=vBADUmfa9Q4" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -278,7 +278,7 @@
             <p>Book</p>
             <a href="{% static 'assets/img/portfolio/portfolio-7.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=LIFK00vf8Y4" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -290,7 +290,7 @@
             <p>Book</p>
             <a href="{% static 'assets/img/portfolio/portfolio-8.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=Q5Owl2fbUbU" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -302,7 +302,7 @@
             <p>Music</p>
             <a href="{% static 'assets/img/portfolio/portfolio-9.jpg' %}" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.youtube.com/watch?v=TO-_3tck2tg" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
 
@@ -310,6 +310,46 @@
 
     </div>
   </section><!-- End My Portfolio Section -->
+
+
+
+
+
+
+
+
+
+  <section id="portfolio" class="portfolio section-bg">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>My Projects</h2>
+      </div>
+
+      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+        {% for project in portfolio_project %}
+        <div class="col-lg-4 col-md-6 portfolio-item filter-{{ project.category }}">
+          <div class="portfolio-wrap">
+            <img src='{{ project.image.url }}' class="img-fluid" alt="{{ project.name }}">
+            <div class="portfolio-links">
+              <a href="{{ project.url }}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="{{ project.name }}"><i class="bx bx-plus"></i></a>
+              <a href="{% url 'portfolio_project' project.id %}" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+
+      </div>
+
+    </div>
+  </section>
+
+
+ 
+
+    
+
+
 
 
   <!-- ======= Contact Me Section ======= -->
@@ -351,6 +391,8 @@
                 <h3>Call Me</h3>
                 <p>+37498 710 722</p>
               </div>
+              <iframe src="https://www.google.com/maps/place/%D0%A1%D0%B8%D1%81%D0%B8%D0%B0%D0%BD/@39.5326314,45.9950986,10408m/data=!3m2!1e3!4b1!4m6!3m5!1s0x4015f0f2605f4629:0x355d022ab75c90ac!8m2!3d39.5241577!4d46.0271686!16zL20vMGg0bGg4?entry=ttu" width="435" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
             </div>
           </div>
 
