--- a/Portfolio/resume/templates/index.html
+++ b/Portfolio/resume/templates/index.html
@@ -391,13 +391,12 @@
                 <h3>Call Me</h3>
                 <p>+37498 710 722</p>
               </div>
-              <iframe src="https://www.google.com/maps/place/%D0%A1%D0%B8%D1%81%D0%B8%D0%B0%D0%BD/@39.5326314,45.9950986,10408m/data=!3m2!1e3!4b1!4m6!3m5!1s0x4015f0f2605f4629:0x355d022ab75c90ac!8m2!3d39.5241577!4d46.0271686!16zL20vMGg0bGg4?entry=ttu" width="435" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+              <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=sisian shahumyan 72&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanox.io/">Gacha Nox</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
             </div>
           </div>
-
+          
         </div>
-
+        
         <div class="col-lg-6">
           <form action="/" method="post" role="form" >
             {% csrf_token %}
@@ -427,10 +426,12 @@
 
         </div>
 
-
+        <!-- <iframe src="" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+        
       </div>
-
+        
     </div>
+    
   </section><!-- End Contact Me Section -->
 
 </main><!-- End #main -->
